[package]
name = "redstone-connector-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "redstone_api",
    "redstone_connector_rust"
]

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }

ethers = { version = "0.17.0", features = ["abigen"]}
ethers-contract = "0.17.0"
ethers-solc = "0.17.0"
ethers-providers = "0.17.0"

fern = { version = "0.6", features = ["colored"] }

hex = "0.4.3"
hex-literal = "0.3.4"

log = "0.4.16"

reqwest = "0.11.7"

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

tokio = { version = "1.17.0", features = ["full"] }