[package]
name = "redstone-connector-rust"
version = "0.1.0"
edition = "2021"
authors = ["Sanghren Yapasdarbre <sanghren@bouh.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace]
members = [
    "redstone_api",
    "redstone_connector_rust",
    "redstone_connector_example"
]
default-members = [
    "redstone_api",
    "redstone_connector_rust"
]

[dependencies]
redstone_api = { version = "^0.1.0", default-features = false, path = "./redstone_api" }
redstone_connector_rust = { version = "^0.1.0", default-features = false, path = "./redstone_connector_rust" }
redstone_connector_example = { version = "^0.1.0", default-features = false, path = "./redstone_connector_example" }