[package]
name = "redstone_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
log = "0.4.16"
reqwest = { version = "0.11.7", features = ["json"]}
tokio = { version = "1.17.0", features = ["full"] }
strfmt = "0.2.2"