[package]
name = "redstone_connector_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

target = "src/main.rs"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
dotenv_codegen = "0.15.0"
dotenv = "0.15.0"
ethers = { version = "0.17.0", features = ["abigen"]}
ethers-contract = "0.17.0"
ethers-solc = "0.17.0"
ethers-providers = "0.17.0"

fern = { version = "0.6", features = ["colored"] }

hex = "0.4.3"
hex-literal = "0.3.4"

log = "0.4.16"

reqwest = "0.11.7"
redstone_connector_rust = { version = "0.1.0", path = "../redstone_connector_rust"}
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

tokio = { version = "1.17.0", features = ["full"] }
