[package]
name = "redstone_connector_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
rust_decimal = "*"
ethers = "1.0.2"
ethers-contract = "1.0.2"
ethers-solc = "1.0.2"
ethers-providers = "1.0.2"
data-encoding = "2.3.3"
log = "0.4.16"
base64 = "0.21.0"
reqwest = "0.11.7"
rustc-hex = "2.1.0"
redstone_api = { version = "0.1.0", path = "../redstone_api"}
tokio = { version = "1.17.0", features = ["full"] }